finished text in bridal party page

--- a/app/views/pages/bridalparty.html.erb
+++ b/app/views/pages/bridalparty.html.erb
@@ -15,9 +15,10 @@
 		</center>
 			<ul>
 				<li>From Chicago, IL</li>
-				<li>Melissa and Ashley became best friends after Melissa got over the fact that she wasn't going to be the only child in the family any more.</li>
-				<li>Melissa met Mike for the first time when he came to visit Chicago for the first time. She was immediately impressed by his drinking skills.</li>
-				<li>Melissa is excited about the wedding because she gets to celebrate a special day with her sister.</li>
+				<li>Missy and Ashley met shortly after Ashley was born and immediately knew they would be friends forever.  This was determined after Ashley's survival of Missy's thorough does of "tough love."</li>
+				<li>Missy met Mike and immediately knew that her sister Ashley and Mike's relationship would blossom into something more due to the fact that Mike was able to deal with Ashely's loving and caring personality.</li>
+				<li>Missy is excited for the wedding because she gets to see Ashley be happy on her wedding day.  And also, because she gets to juke on the dance floor.</li>  
+				<li>Fun fact about Missy:  In 2008-09, she was on the WGN website singing "Go cubs Go!" by Steve Goodman.  Yeah, she's kind of a big deal.</li>
 			</ul>
 	</div>
 </div>
@@ -57,7 +58,8 @@
 				<li>From Chicago, IL</li>
 				<li>Besides being a fellow Josh Hartnett enthusiast, Ashley and Katie attended every school together, from grammar school to college. They were also teammates on the famed St. Symphorosa 6th grade basketball championship team</li>
 				<li>She met Mike last year when Ashley introduced him to her best friends</li>
-				<li>She is excited to see one of her oldest friends get married</li>
+				<li>She is incredibly happy and excited to see one of her oldest friends get married</li>
+				<li>Fun Fact:  Katie currently is living in Denver, Colorado!</li>
 			</ul>
 	</div>
 </div>
@@ -94,9 +96,10 @@
 		</center>
 			<ul>
 				<li>From Chicago, IL</li>
-				<li>Ashley and Jacqui met in first grade and their friendship really blossomed in 4th grade when they were told that they had the two worst handwriting in the class.</li>
-				<li>Jacqui met Mike around Christmas and knew he was a keeper after he had no problem having a dance off in an ugly Christmas sweater inside Lawlor's Bar.</li>
-				<li>Jacqui is excited for the wedding because it is one of her best friends getting married and she's excited to embarrass Ashley at the wedding.</li>
+				<li>Elyse and Ashley met in Kindergarten due to their love of tattling, correcting others and talking nonstop and remained best friends because Elyse thought Ashley would tell on her if she chose another friend over her in 1st grade. They have been best friends ever since.</li>
+				<li>Mike helped Elyse survive her first (and last) country concert and served as her unofficial tour guide of late night Raleigh fast food (aka Cookout).</li>
+				<li>Elyse is excited for the wedding because she has grown up with Ashley. They have been through the best and worst together. Elyse is so happy Ashley found a man that she can do the same with, and that she gets to be a part of their special day!</li>
+				<li>Fun Fact:  While studying abroad in Barcelona, I once successfully stopped a pick pocketing in progress. No items were stolen or harmed.</li>
 			</ul>
 	</div>
 </div>
@@ -113,9 +116,9 @@
 		</center>
 			<ul>
 				<li>From Yorktown Heights, New York</li>
-				<li>Cathy and Mike have been best friends since childhood - since they are siblings.</li>
-				<li>Cathy met Ashley after Ashley moved into the house with Mike. Kathy is the best roommate to both.</li>
-				<li>Cathy loves both Michael and Ashley and is excited for them to tie the knot! She also thinks that the natural science museum is pretty awesome and is excited to celebrate the reception at such a magnificent place.</li>
+				<li>Cathy is Mike's sister and best roommate to both (as she has the pleasure of living with them)</li>
+				<li>Cathy loves both Michael and Ashley and is excited for them to tie the knot! She also thinks that the natural science museum is pretty awesome.</li>
+				<li>Fun Fact:  Cathy's birthday is on Halloween.</li>
 			</ul>
 	</div>
 </div>
