--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
   <div class="collapse navbar-collapse navbar-ex1-collapse">
     <ul class="nav navbar-nav">
       <li class="<%= 'active' if current_page?(root_path) %>"><%= link_to "Home", root_path %></li>
-      <li class="<%= 'active' if current_page?(registration_path) %>"><%= link_to "Registration", registration_path %></li>
+      <li class="<%= 'active' if current_page?(registry_path) %>"><%= link_to "Registry", registry_path %></li>
       <li class="<%= 'active' if current_page?(rsvp_path) %>"><%= link_to "RSVP", rsvp_path %></li>
       <li class="<%= 'active' if current_page?(accomodations_path) %>"><%= link_to "Accomodations", accomodations_path %></li>
       <li class="<%= 'active' if current_page?(thingstodo_path) %>"><%= link_to "Things To Do", thingstodo_path %></li>
