finished events page

--- a/app/views/pages/weddingevents.html.erb
+++ b/app/views/pages/weddingevents.html.erb
@@ -1,3 +1,61 @@
 <div class="row">
-	<center><h1><span class="glyphicon glyphicon-calendar gold"></span>Wedding Events</h1></center>
+	<center>
+		<h1>
+			<span class="glyphicon glyphicon-calendar gold"></span>Wedding Day Events<br>December 13, 2014
+		</h1>
+		<div class="col-md-4 col-md-offset-1">
+			<h2>
+				Wedding Ceremony
+			</h2>
+			<h3>
+				1PM EST
+			</h3>
+			<p>
+				<b>St. Francis of Assisi Church</b>
+			</p>
+			<p>
+				11401 Leesville Rd<br>
+				Raleigh, NC 27613
+			</p>
+		</div>
+		<div class="col-md-4 col-md-offset-2">
+			<h2>
+				Wedding Reception
+			</h2>
+			<h3>
+				6PM EST
+			</h3>
+			<p>
+				<b>North Carolina Museum of Natural Sciences</b>
+			</p>
+				11 West Jones Street<br>
+				Raleigh, NC 27601
+			</p>
+		</div>
+	</center>
+	<div class="col-md-8 col-md-offset-2" id="parking">
+		<h2>
+			<center>
+				Parking
+			</center>
+		</h2>
+		<p>
+			Parking is available weekdays in several public pay parking decks within walking distance of the Museum.<br><br>
+			<b>Note:</b> Parking rates at all Downtown State Government Complex parking facilities are $2/hour.
+		</p>
+		<ul>
+			<li>
+				An above-ground lot is located one block east of the Museum, with entrances on Jones and Edenton Streets
+			</li>
+			<li>
+				The Green Square parking deck is at the corner of Edenton and McDowell Streets, behind the NRC. The entrance to the deck is on Edenton between Salisbury and McDowell Streets. Exit the deck on the north side and you will be at the back entrance to the NRC
+			</li>
+		</ul>
+		<p>
+			Limited metered parking is available along Jones and Edenton Streets. Parking is free and abundant on weekends and within walking distance of the Museum. For parking choices within walking distance of the Museum, see the <%= link_to("downtown map", "http://files.naturalsciences.org/Directions_and_Parking_map_2013.pdf", :target => "_blank") %>
+		</p>
+	</div>
+	<div class="col-md-12">
+		<center><iframe src="https://mapsengine.google.com/map/embed?mid=z0i7YkDsRZoo.kzUt-fFCqthM" width="640" height="480"></iframe></center>
+	</div>
 </div>
