--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -5,6 +5,11 @@ body
 	background-image: image-url('background/arches.png');
 }
 
+iframe
+{
+	border:none;
+}
+
 .gold
 {
 	color: #D4A017;
@@ -67,6 +72,11 @@ footer
 		text-align: justify;
 		padding-top: 10px;
 	}
+}
+#parking
+{
+	border-style:none;
+	background-color:transparent;
 }
 
 .col-md-5
