--- a/app/views/pages/rsvp.html.erb
+++ b/app/views/pages/rsvp.html.erb
@@ -1,3 +1,6 @@
 <div class="row">
 	<center><h1><span class="glyphicon glyphicon-ok gold"></span>RSVP</h1></center>
+	<h3>
+		<center>Guests will recieve instructions to RSVP with their formal wedding invitations</center>
+	</h3>
 </div>
