finished the registry page

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -5,6 +5,22 @@ body
 	background-image: image-url('background/arches.png');
 }
 
+#bbb
+{
+	padding-bottom:10px;
+}
+
+#target
+{
+	padding-bottom:10px;
+}
+
+#registrypic
+{
+	padding-top:10px;
+	padding-bottom:10px;
+}
+
 iframe
 {
 	border:none;
