--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -3,11 +3,17 @@
 </div>
 
 <div class="row">
-	<div class="col-md-5">
-		<h2><center>Target</center></h2>
-	</div>
+		<center>
+		<h3>
+			<%= link_to("Bed Bath & Beyond Registry", "https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=541043319&eventType=Wedding&pwsurl=?mcid=EM_triggeredem_emailregistryplural__allpromos", :target =>"_blank") %>
+		</h3>
+		<h3>
 
-	<div class="col-md-5 col-md-offset-2">
-		<h2><center>Bed Bath & Beyond</center></h2>
+			<%= link_to("Target Registry", "http://www.target.com/wedd/registry/HL_liTVmyzOT7i0TDmm7Rg", :target => "_blank")%>
+		</h3>
+
+	<div class="col-md-12" id="registrypic">
+		<%= image_tag("registry/ashmike.jpg", size: "500x375", class: "img-responsive img-rounded") %>
 	</div>
+	</center>
 </div>
