vendor compiled assets and finished site minus styling

--- a/app/views/pages/accomodations.html.erb
+++ b/app/views/pages/accomodations.html.erb
@@ -1,3 +1,27 @@
 <div class="row">
 	<center><h1><span class="glyphicon glyphicon-home gold"></span>Accomodations</h1></center>
+
+	<div class="col-md-10 col-md-offset-1" id="accomodationsdiv">
+		<h2>
+			<center>
+			Hotel
+			</center>
+		</h2>
+		<p>
+			Ashley and Michael have reserved a block of hotel rooms for the weekend of the event in downtown Raleigh at the <b>Sheraton Raleigh Hotel</b>.<br><br>
+			<center>Rooms can be book directly <%= link_to("here", "https://www.starwoodmeeting.com/StarGroupsWeb/res?id=1404047718&key=38B134D6", :target => "_blank") %>.</center><br><br>
+			As their wedding is near the holidays we suggest booking as soon as you can finalize your travel dates.
+		</p>
+		<h2>
+			<center>
+			Airport
+			</center>
+		</h2>
+		<p>
+			<center>
+			Raleigh-Durham International Airport
+			</center>
+		</p>
+		<center><iframe src="https://mapsengine.google.com/map/embed?mid=z0i7YkDsRZoo.kzUt-fFCqthM" width="540" height="380"></iframe></center>
+	</div>
 </div>
