--- a/app/views/pages/thingstodo.html.erb
+++ b/app/views/pages/thingstodo.html.erb
@@ -1,3 +1,30 @@
 <div class="row">
-	<center><h1><span class="glyphicon glyphicon-map-marker gold"></span>Things To Do</h1></center>
+	<center><h1><span class="glyphicon glyphicon-map-marker gold"></span>Things To Do</h1>
+	<h2>If your travel arrangements should bring you to the Raleigh-Durham Area, here are some great places/foods to explore!</h2>
+	</center>
+	<div class="col-md-6">
+		<center>
+		<h3>Food</h3>
+		<%= link_to("Beasley's", "http://ac-restaurants.com/beasleys/", :target=>"_blank")%><br>
+		<%= link_to("Sitti", "http://sitti-raleigh.com/", :target=>"_blank")%><br>
+		<%= link_to("Natty Greene's", "http://www.nattygreenes.com/", :target=>"_blank")%><br>
+		<%= link_to("Chuck's", "http://ac-restaurants.com/chucks/", :target=>"_blank")%><br>
+		<%= link_to("Clyde Cooper's BBQ", "http://clydecoopersbbq.com/", :target=>"_blank")%><br>
+		<%= link_to("Oak City Meatball Shoppe", "www.oakcitymeatball.com/", :target=>"_blank")%><br>
+		<%= link_to("Mellow Mushroom", "http://mellowmushroom.com/", :target=>"_blank")%><br>
+		</center>
+	</div>
+
+	<div class="col-md-6">
+		<center>
+		<h3>Fun</h3>
+		<%= link_to("Big Boss Brewery", "www.bigbossbrewing.com", :target=>"_blank")%><br>
+		<%= link_to("Marbles Children's Museum", "http://www.marbleskidsmuseum.org/", :target=>"_blank")%><br>
+		<%= link_to("Trolley Pub", "http://trolleypub.com/raleigh/", :target=>"_blank")%><br>
+		<%= link_to("NC State Arboridum", "http://www.ncsu.edu/jcraulstonarboretum/index.php", :target=>"_blank")%><br>
+		<%= link_to("NC State Museum of Natural History", "http://www.ncdcr.gov/ncmoh/Home.aspx", :target=>"_blank")%><br>
+		<%= link_to("Carolina Hurricane's Game", "http://hurricanes.nhl.com/", :target=>"_blank")%><br>
+		<%= link_to("Winterfest Raleigh", "http://www.godowntownraleigh.com/winterfest", :target=>"_blank")%><br>
+		</center>
+	</div>
 </div>
