--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -24,6 +24,8 @@ body
 iframe
 {
 	border:none;
+	padding-bottom: 10px;	
+	padding-bottom: 10px;
 }
 
 .gold
@@ -89,6 +91,24 @@ footer
 		padding-top: 10px;
 	}
 }
+
+#thingstodo
+{
+	border-style: solid;
+	border-color: #666362;
+	border-width: 2px;
+	border-radius: 5px;
+	background-color: #FFFFF0;
+	h2
+	{
+		font-family: 'Glass Antiqua', Helvetica, Arial, sans-serif;	
+	}
+	p
+	{
+		text-align: justify;
+		padding-top: 10px;
+	}
+}
 #parking
 {
 	border-style:none;
@@ -122,7 +142,7 @@ footer
 
 li
 {
-	padding:1px;
+	padding:2px;
 }
 
 .col-md-4
@@ -142,6 +162,14 @@ li
 	}
 }
 
+#accomodationsdiv
+{
+	p
+	{
+		text-align: justify;
+	}
+}
+
 .row
 {
 	margin-left: 0px !important;
@@ -153,6 +181,10 @@ li
 		margin-bottom: 0px;
 		font-family: 'Glass Antiqua', Helvetica, Arial, sans-serif;
 		font-size: 40px;
+	}
+	h2
+	{
+		font-family: 'Glass Antiqua', Helvetica, Arial, sans-serif;	
 	}
 }
 
@@ -173,7 +205,7 @@ li
 {
 	#katie img
 	{
-		margin-top: 15px;
+		margin-top: 35px;
 	}
 
 	#jacqui
@@ -184,13 +216,13 @@ li
         }
 		img
 		{
-			margin-top: 35px;
+			margin-top: 55px;
 		}
 	}
 
 	#elyse img
 	{
-		margin-top: 40px;
+		margin-top: 90px;
 	}
 
 	#cathy
@@ -201,7 +233,7 @@ li
 	    }
         img
         {
-    		margin-top: 40px;
+    		margin-top: 30px;
         }
 	}
 	#brittany
@@ -219,7 +251,7 @@ li
 	{
 		img
 		{
-			margin-top: 25px;
+			margin-top: 75px;
 		}
 	}
 }
@@ -258,5 +290,6 @@ $container-lg: 800px;
 $container-tablet: 670px;
 $container-md: 800px;
 $navbar-default-bg: #FFFFF0;
+$link-color: #D4A017;
 
 @import 'bootstrap';
