--- a/app/views/pages/registry.html.erb
+++ b/app/views/pages/registry.html.erb
@@ -1,19 +1,13 @@
 <div class="row">
-	<center><h1><span class="glyphicon glyphicon-gift gold"></span>Registration</h1></center>
-</div>
+	<center><h1><span class="glyphicon glyphicon-gift gold"></span>Registry</h1></center>
 
-<div class="row">
 		<center>
-		<h3>
+		<h2>
 			<%= link_to("Bed Bath & Beyond Registry", "https://www.bedbathandbeyond.com/store/giftregistry/view_registry_guest.jsp?registryId=541043319&eventType=Wedding&pwsurl=?mcid=EM_triggeredem_emailregistryplural__allpromos", :target =>"_blank") %>
-		</h3>
-		<h3>
+		</h2>
+		<h2>
 
 			<%= link_to("Target Registry", "http://www.target.com/wedd/registry/HL_liTVmyzOT7i0TDmm7Rg", :target => "_blank")%>
-		</h3>
-
-	<div class="col-md-12" id="registrypic">
-		<%= image_tag("registry/ashmike.jpg", size: "500x375", class: "img-responsive img-rounded") %>
-	</div>
+		</h2>
 	</center>
 </div>
