pushing to heroku

--- a/app/views/pages/accomodations.html.erb
+++ b/app/views/pages/accomodations.html.erb
@@ -10,7 +10,9 @@
 		<p>
 			Ashley and Michael have reserved a block of hotel rooms for the weekend of the event in downtown Raleigh at the <b>Sheraton Raleigh Hotel</b>.<br><br>
 			<center>Rooms can be book directly <%= link_to("here", "https://www.starwoodmeeting.com/StarGroupsWeb/res?id=1404047718&key=38B134D6", :target => "_blank") %>.</center><br><br>
-			As their wedding is near the holidays we suggest booking as soon as you can finalize your travel dates.
+
+			As their wedding is near the holidays, it is turning into an increasingly popular wedding date for other couples. We suggest booking as soon as you can finalize your travel dates. <b>If there are no more rooms available at the Sheriton Raleigh Hotel, or if you would like to make other arrangments, other hotels include:</b> Marriott Raleigh City Center, Hampton Inn and Suites Downtown Raleigh, and Holiday Inn Raleigh Downtown.<br><br>
+			</center>
 		</p>
 		<h2>
 			<center>
