--- a/app/views/pages/weddingevents.html.erb
+++ b/app/views/pages/weddingevents.html.erb
@@ -1,7 +1,32 @@
 <div class="row">
 	<center>
 		<h1>
-			<span class="glyphicon glyphicon-calendar gold"></span>Wedding Day Events<br>December 13, 2014
+			<span class="glyphicon glyphicon-calendar gold"></span>Wedding Events
+		</h1>
+		<h1>
+			<b>Friday December 12, 2014</b>
+		</h1>
+
+		<div class="col-md-12">
+			<h2>
+				Pre-Wedding Get Together
+			</h2>
+			<h3>
+				6:30PM-10PM EST
+			</h3>
+			<p>
+				<center>
+					<b>Full Steam Brewery</b><br>
+					726 Rigsbee Ave<br>
+					Durham, NC 27701<br><br>
+					Children are allowed with supervision until 9PM<br>
+					Leashed dogs are allowed at all times<br>
+				</center>
+			</p>
+		</div>
+
+		<h1>
+			<b>Saturday December 13, 2014</b>
 		</h1>
 		<div class="col-md-4 col-md-offset-1">
 			<h2>
@@ -36,7 +61,7 @@
 	<div class="col-md-10 col-md-offset-1" id="parking">
 		<h2>
 			<center>
-				Parking
+				Parking For Reception
 			</center>
 		</h2>
 		<p>
