added modified file changes for rsvp

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -290,6 +290,7 @@ $container-lg: 800px;
 $container-tablet: 670px;
 $container-md: 800px;
 $navbar-default-bg: #FFFFF0;
+$input-border-focus: #666362;
 $link-color: #D4A017;
 
 @import 'bootstrap';
